Spacing adjustment on home page. Made logo graphic responsive. Changed background as workaround for fixed background limitation in Safari. Minor refactoring.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,8 +10,10 @@
 }
 
 body {
-    background: url("https://picsum.photos/id/1000/1920/1080") top right no-repeat;
-    background-attachment: fixed;
+  background-color: black;
+  background-image: url("https://www.transparenttextures.com/patterns/rocky-wall.png");
+    /* background-attachment: fixed; */
+    /* background-size: cover; */
     height: 100%;
     width: 100%;
 }
@@ -20,6 +22,15 @@ body {
   padding: 0 !important;
   margin-left: auto !important;
   margin-right: auto !important;
+}
+
+.container-fluid-logo {
+  background-color: #fff;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+  width: 30%;
 }
 
 .container-fluid-standard {
@@ -32,7 +43,7 @@ body {
   border-bottom-right-radius:10px;
 }
 
-h1 {
+.h1-standard {
   padding-left: 3rem;
   padding-top: 1.5rem;
 }
